Termino de la Practica 2

--- a/Practica 2/Practica 2.Rmd
+++ b/Practica 2/Practica 2.Rmd
@@ -24,7 +24,7 @@ library (dplyr)
 ```
 
 
-# Pregunta 1
+# Pregunta 1-1
 Descargar la página web de la URL indicada, y almacenarlo en un formato de R apto para ser tratado. El primer paso para realizar tareas de crawling y scraping es poder descargar los datos de la web. #Para esto usaremos la capacidad de R y de sus librerías (httr y XML) para descargar webs y almacenarlas en variables que podamos convertir en un formato fácil de analizar (p.e.de HTML a XML). 
 ```{r p1}
 URL <- 'https://www.mediawiki.org/wiki/MediaWiki'
@@ -34,7 +34,7 @@ Texto <- read_html(html_content)
 ```
 
 
-# Pregunta 2
+# Pregunta 1-2
 Analizar el contenido de la web, buscando el título de la página (que en HTML se etiqueta como “title”). En las cabeceras web encontramos información como el título, los ficheros de estilo visual, y meta-información como el nombre del autor de la página, una descripción de esta, el tipo de codificación de esta, o palabras clave que indican qué tipo de información contiene la página. Una vez descargada la página, y convertida a un formato analizable (como XML), buscaremos los elementos de tipo “title”. P.e. “<title>Titulo de Página</title>”
 ```{r p2}
 html_title <- Texto %>% html_element("title") %>% html_text2()
@@ -42,7 +42,7 @@ print (html_title)
 ```
 
 
-# Pregunta 3
+# Pregunta 1-3
 Analizar el contenido de la web, buscando todos los enlaces (que en HTML se etiquetan como “a”), buscando el texto del enlace, así como la URL. Vamos a extraer, usando las funciones de búsqueda XML, todos los enlaces quesalen de esta página con tal de listarlos y poder descargarlas más tarde. Sabemos que estos son elementos de tipo “<a>”, que tienen el atributo “href” para indicar la URL del enlace. P.e. “<a href = ‘enlace’>Texto del Enlace</a>”. Del enlace nos quedaremos con la URL de destino y con el valor del enlace (texto del enlace)
 ```{r p3}
 Enlaces <- Texto %>% html_elements("a")
@@ -56,7 +56,7 @@ dd <- data.frame(
 ```
 
 
-# Pregunta 4
+# Pregunta 1-4
 Generar una tabla con cada enlace encontrado, indicando el texto queacompaña el enlace, y el número de veces que aparece un enlace con ese mismo objetivo. En este paso nos interesa reunir los datos obtenidos en el anterior paso. Tendremos que comprobar, para cada enlace, cuantas veces aparece.
 ```{r p4}
 tabla_enlaces <- dd %>% group_by(enlaces, texto) %>% summarise(contador = n(), .groups()="drop")
@@ -64,7 +64,7 @@ print (tabla_enlaces)
 ```
 
 
-# Pregunta 5
+# Pregunta 1-5
 Para cada enlace, seguirlo e indicar si está activo (podemos usar el código de status HTTP al hacer una petición a esa URL). En este paso podemos usar la función HEAD de la librería “httr”, que en vez de descargarse la página como haría GET, solo consultamos los atributos de la página o fichero destino. HEAD nos retorna una lista de atributos, y de entre estos hay uno llamado “header” que contiene más atributos sobre la página buscada. Si seguimos podemos encontrar el “status_code” en “resultado$status_code”. El “status_code” nos indica el resultado de la petición de página o fichero. Este código puede indicar que la petición ha sido correcta (200), que no se ha encontrado (404), que el acceso está restringido (403), etc.
 • Tened en cuenta que hay enlaces con la URL relativa, con forma “/xxxxxx/xxxxx/a.html”. En este caso, podemos indicarle como “handle” el dominio de la página que estamos tratando, o añadirle el dominio a la URL con la función “paste”. 
 • Tened en cuenta que puede haber enlaces externos con la URL absoluta, con forma “http://xxxxxx/xxxx/a.html” (o https), que los trataremos directamente.
@@ -104,7 +104,10 @@ tabla_enlaces$enlace_absoluto <- sapply(tabla_enlaces$enlaces, relative2absolute
 ```
 
 
-```{r comprobar_estado}
+```{r p5-3 comprobar_estado}
 tabla_enlaces$activo <- sapply(tabla_enlaces$enlace_absoluto, check_link_status)
-
 ```
+
+# Pregunta 2-1
+Un histograma con la frecuencia de aparición de los enlaces, pero separado por URLs absolutas (con “http…”) y URLs relativas. El objetivo es ver en un histograma cuantas veces aparece cada URL, pero separando por URLs absolutas y relativas. Un primer paso es añadir a nuestro data.frame una columna indicando qué filas contienen URLs con “http” al inicio y cuáles no, indicando que la URL es absoluta. Después creamos un histograma para cada grupo: en caso de usar gráficos base, creamos un histograma para cada uno, y los juntamos con la función “par”; en caso de lattice o ggplot2, le pasamos los datos y le indicamos qué columna queremos que use para separar los datos.
+
